' Hospital RFID Node Firmware - Split Class Diagrams
' Generated from include.zip header files

' ==========================================================
' SECTION 1 — PER CLASS / STRUCT / ENUM DIAGRAMS
' ==========================================================

@startuml NodeManager_Class
  title NodeManager Class
  skinparam classAttributeIconSize 0
  hide circle
  class NodeManager {
    -my_node_wi_fi : IMyNodeWiFi&
    -my_node_net_config : IMyNodeNetworkConfig&
    -my_node_mqtt : IMyNodeMQTTConnector&
    -my_node_rfid : IMyNodeRFID&
    -my_node_status_led : INodeStatusLED&
    -my_clock : INodeClock&
    -my_board : INodeBoardControl&
    -my_node_id : String
    -my_node_role : String
    -my_node_hospital : String
    -my_hospital_id : String
    -my_node_room : String
    -my_node_client_id : String
    -my_node_msg : String
    -my_node_stat : String
    -last_heartbeat_time : uint32_t
    -heartbeat_interval : uint32_t
    -last_tag_id[RFID_BUFFER_SIZE] : char
    -last_tag_time : uint32_t
    -duplicate_suppress_ms : uint32_t
    -reset_button_press_start : uint32_t
    -reset_button_was_pressed : bool
    -reset_button_triggered : bool
    -last_mqtt_connected : bool
    -my_node_is_provisioned : bool
    -my_commands_subscribed : bool
    -last_command_subs_attempt : uint32_t
    -my_time_synced : bool
    -my_time_sync_started : bool
    -my_time_sync_start_ms : uint32_t
    -my_last_time_sync_check_ms : uint32_t
    -my_last_remote_check_ms : uint32_t
    -{static}
    active_instance : NodeManager*
    +NodeManager(IMyNodeWiFi&, IMyNodeNetworkConfig&, IMyNodeMQTTConnector&, IMyNodeRFID&, INodeStatusLED&, INodeClock&, INodeBoardControl&)
    +~NodeManager()
    +beginNodeSystem() : void
    +runNodeSystem() : void
    -{static}
    myNodeMQTTCallback(char*, uint8_t*, unsigned int) : void
    -handleMqttMessage(char*, uint8_t*, unsigned int) : void
    -subscribeToCommandTopics() : void
    -handleBlinkCommand(const char*, const char*, unsigned int) : void
    -publishCommandAck(const char*, const char*, const char*) : void
    -handleRFID() : void
    -publishCheckpoint(const char*) : void
    -publishRegistration(const char*) : void
    -handleHeartbeat() : void
    -isDuplicateTag(const char*) : bool
    -applyRemoteConfig() : void
    -fetchRemoteConfig() : bool
    -beginTimeSync() : void
    -getCurrentTimestampWIB(char*, size_t) : bool
    -updateTimeSync() : void
    -setupNetConfigResetButton() : void
    -handleConfigResetButton() : void
    -sayHello() : void
    -sayGoodbye() : void
    -handleGreetings(const char*, const char*) : void
    -checkRemoteConfigPeriodically() : void
    -prepareMQTTTimestamp(char*, size_t) : bool
    -checkRole(String) : String
    -hospitalNameToID(String) : String
  }
@enduml

@startuml NodeStatusLED_Class
title NodeStatusLED Class
skinparam classAttributeIconSize 0
hide circle
class NodeStatusLED {
-green_pin : uint8_t
-red_pin : uint8_t
-green_active : bool
-red_detect : bool
-red_active : bool
-identify_active : bool
-identify_led_on : bool
-identify_toggles_remaining : uint8_t
-identify_last_toggle_time : uint32_t
-identify_interval_ms : uint32_t
-last_red_blink_time : uint32_t
-red_blink_interval_ms : uint32_t
+NodeStatusLED(uint8_t, uint8_t)
+~NodeStatusLED()
+beginMyLEDs() : void
+setGreenConnected(bool) : void
+setRedDetecting(bool) : void
+startIdentifyBlink(uint8_t, uint32_t) : void
+updateMyLEDstate() : void
}
@enduml

@startuml NodeBoardControl_Class
title NodeBoardControl Class
skinparam classAttributeIconSize 0
hide circle
class NodeBoardControl {
+NodeBoardControl()
+~NodeBoardControl()
+setPinMode(uint8_t, uint8_t) : void
+readDigital(uint8_t) : int
+restartBoard() : void
}
@enduml

@startuml NodeClock_Class
title NodeClock Class
skinparam classAttributeIconSize 0
hide circle
class NodeClock {
+NodeClock()
+~NodeClock()
+millisNow() const : uint32_t
}
@enduml

@startuml MyNodeMQTT_Class
title MyNodeMQTT Class
skinparam classAttributeIconSize 0
hide circle
class MyNodeMQTT {
-my_node_mqtt_client : PubSubClient
-node_esp_client : WiFiClient&
-my_node_net_server : const char*
-my_node_net_port : int
-my_node_net_id : const char*
-my_mqtt_callback : void (*)(char*, uint8_t*, unsigned int)
-last_reconnect_attempt : uint32_t
-reconnect_interval : uint32_t
-{static}
my_active_instance : MyNodeMQTT*
+MyNodeMQTT(WiFiClient&, const char*, int, const char*, void (*)(char*, uint8_t*, unsigned int))
+~MyNodeMQTT()
+startMyMQTT() : void
+setNodeMQTTServer(const char*) : void
+setNodeMQTTPort(int) : void
+setNodeMQTTClientId(const char*) : void
+myNodeCallbackFunction(char*, uint8_t*, unsigned int) : void
+setMessageCallback(void (*)(char*, uint8_t*, unsigned int)) : void
+connectToMyNodeNetwork() : void
+myNodeMQTTLoop() : void
+unsubscribeMyNodeNetMQTT(const char*) : void
+updateServerConfig() : void
+reconnectToMyMQTT() : void
+amIConnected() : bool
+subscribeToMyNodeNetMQTT(const char*) : bool
+publishToMyNodeNetMQTT(const char*, const char*) : bool
+publishDetection(const char*, const char*, const char*, const char*, const char*, const char*) : bool
+publishRegistration(const char*, const char*, const char*, const char*, const char*) : bool
+publishHeartbeat(const char*, const char*, const char*, const char*, const char*) : bool
+publishGreeting(const char*, const char*, const char*, const char*, const char*, const char*, const char*) : bool
-{static}
myMQTTCallbackRouter(char*, uint8_t*, unsigned int) : void
-{static}
hasRequiredText(const char*) : bool
-{static}
topicWasBuilt(int, size_t) : bool
-{static}
buildJsonPayload(JsonDocument&, char*, size_t) : bool
}
MyNodeMQTT *-- PubSubClient
MyNodeMQTT o-- WiFiClient
@enduml

@startuml MyNodeNetworkConfig_Class
title MyNodeNetworkConfig Class
skinparam classAttributeIconSize 0
hide circle
class MyNodeNetworkConfig {
-my_preferences : Preferences
-my_web_server : WebServer
-my_bootstrap_config : myNodeBootstrapConfig
-my_remote_config : myNodeRemoteConfig
-my_restart_pending : bool
-my_restart_at_ms : uint32_t
-my_setup_mode : bool
+MyNodeNetworkConfig()
+~MyNodeNetworkConfig()
+beginMyNetConfig() : void
+loopMyNetConfig() : void
+isConfigured() const : bool
+isSetupMode() const : bool
+getBootstrapConfig() const : const myNodeBootstrapConfig&
+getRemoteConfig() const : const myNodeRemoteConfig&
+setRemoteConfig(const String&, const String&, const String&, const String&, uint16_t, bool) : void
+resetConfiguration() : void
-loadConfig() : void
-saveConfig() : void
-startAccessPoint() : void
-startWebServer() : void
-makeAccessPointName() const : String
-generateDeviceId() const : String
-handleRoot() : void
-handleSave() : void
-handleRefresh() : void
-serveFile(const char*, const char*) : void
-handleStyle() : void
-handleScript() : void
-clearBootstrapConfig(bool) : void
-clearRemoteConfig() : void
-handleDebugFiles() : void
-buildWiFiOptionsHtml() : String
-htmlEscape(const String&) const : String
-readFile(const char*) : String
-makeUrlSafe(const String&) const : String
-testWiFiConnection(const String&, const String&, bool, uint32_t, String&) : bool
}
MyNodeNetworkConfig *-- Preferences
MyNodeNetworkConfig *-- WebServer
MyNodeNetworkConfig *-- myNodeBootstrapConfig
MyNodeNetworkConfig *-- myNodeRemoteConfig
@enduml

@startuml MyNodeWiFi_Class
title MyNodeWiFi Class
skinparam classAttributeIconSize 0
hide circle
class MyNodeWiFi {
-ssid : String
-password : String
-last_reconnect_attempt : uint32_t
-reconnect_interval : uint32_t
+MyNodeWiFi()
+~MyNodeWiFi()
+setCredentials(const char*, const char*) : void
+hasCredentials() const : bool
+startWiFi() : void
+loopNetWiFi() : void
+amIConnected() : bool
+reconnectWiFi() : void
+disconnectWiFi() : void
}
@enduml

@startuml MyNodeRFID_Class
title MyNodeRFID Class
skinparam classAttributeIconSize 0
hide circle
enum RFIDConfigState {
RFID_CONFIG_IDLE
RFID_CONFIG_WAIT_READER_READY
RFID_CONFIG_SEND_STOP_INVENTORY
RFID_CONFIG_WAIT_AFTER_STOP
RFID_CONFIG_SEND_SET_POWER
RFID_CONFIG_WAIT_SET_POWER_RESPONSE
RFID_CONFIG_DONE
RFID_CONFIG_FAILED
}
class MyNodeRFID {
-my_rfid_serial : HardwareSerial&
-my_rx_pin : int
-my_tx_pin : int
-my_en_pin : int
-frame_buffer[RFID_FRAME_BUFFER_SIZE] : uint8_t
-frame_index : size_t
-expected_frame_length : size_t
-my_rfid_power : uint16_t
-rfid_config_state : RFIDConfigState
-rfid_config_state_started_at : uint32_t
-pending_power_cdbm : uint16_t
-rfid_config_done : bool
+MyNodeRFID(HardwareSerial&, int, int, int)
+~MyNodeRFID()
+beginMyNodeRFID(uint32_t) : void
+enableMyRFID() : void
+disableMyRFID() : void
+clearBuffer() : void
+readDetectedTag(char*, size_t) : bool
+configureRFID() : void
+startRFIDConfiguration(uint16_t) : void
+runRFIDConfiguration() : void
+isRFIDConfigurationFinished() const : bool
-sendCommand(const uint8_t*, size_t) : bool
-isValidFrame(size_t) const : bool
-extractEPC(char*, size_t) : bool
-readNextByte(uint8_t&) : bool
-isFrameStartByte(uint8_t) const : bool
-resetFrameBuffer() : void
-appendFrameByte(uint8_t) : bool
-isFrameComplete() const : bool
-pollFrame() : bool
-waitForResponse(uint8_t, uint8_t, uint32_t) : bool
-frameMatches(uint8_t, uint8_t) const : bool
-setTransmitPower(uint16_t) : bool
-getTransmitPower(uint16_t&) : bool
-sendSetPowerCommandOnly(uint16_t) : bool
-isSetPowerSuccessFrame() const : bool
}
MyNodeRFID o-- HardwareSerial
MyNodeRFID --> RFIDConfigState
@enduml

@startuml Network_Structs_And_RFID_Enum
title Data Structs and RFID Enum
skinparam classAttributeIconSize 0
hide circle
struct myNodeBootstrapConfig {
+device_id : String
+wifi_ssid : String
+wifi_password : String
+is_configured : bool
}
struct myNodeRemoteConfig {
+role : String
+hospital_name : String
+room_name : String
+mqtt_host : String
+mqtt_port : uint16_t
+is_provisioned : bool
}
enum RFIDConfigState {
RFID_CONFIG_IDLE
RFID_CONFIG_WAIT_READER_READY
RFID_CONFIG_SEND_STOP_INVENTORY
RFID_CONFIG_WAIT_AFTER_STOP
RFID_CONFIG_SEND_SET_POWER
RFID_CONFIG_WAIT_SET_POWER_RESPONSE
RFID_CONFIG_DONE
RFID_CONFIG_FAILED
}
@enduml

' ==========================================================
' SECTION 2 — RELATION BETWEEN MAIN FIRMWARE OBJECTS
' ==========================================================

@startuml Main_Firmware_Relation
title Main Firmware Object Relation / Dependency Injection View
skinparam classAttributeIconSize 0
hide circle
class MainFirmware <<main.cpp / .ino>> {
+setup() : void
+loop() : void
}
class NodeManager
class MyNodeWiFi
class MyNodeNetworkConfig
class MyNodeMQTT
class MyNodeRFID
class NodeStatusLED
class NodeClock
class NodeBoardControl
class WiFiClient
class HardwareSerial

MainFirmware *-- MyNodeWiFi : creates
MainFirmware *-- MyNodeNetworkConfig : creates
MainFirmware *-- WiFiClient : creates/owns
MainFirmware *-- MyNodeMQTT : creates
MainFirmware *-- HardwareSerial : uses Serial port
MainFirmware *-- MyNodeRFID : creates
MainFirmware *-- NodeStatusLED : creates
MainFirmware *-- NodeClock : creates
MainFirmware *-- NodeBoardControl : creates
MainFirmware *-- NodeManager : creates

NodeManager o-- MyNodeWiFi : uses via IMyNodeWiFi&
NodeManager o-- MyNodeNetworkConfig : uses via IMyNodeNetworkConfig&
NodeManager o-- MyNodeMQTT : uses via IMyNodeMQTTConnector&
NodeManager o-- MyNodeRFID : uses via IMyNodeRFID&
NodeManager o-- NodeStatusLED : uses via INodeStatusLED&
NodeManager o-- NodeClock : uses via INodeClock&
NodeManager o-- NodeBoardControl : uses via INodeBoardControl&

MyNodeMQTT o-- WiFiClient : network transport
MyNodeRFID o-- HardwareSerial : RFID UART transport
@enduml

@startuml Main_Firmware_Behavior_Relation
title Main Firmware Behavior Relation
skinparam classAttributeIconSize 0
hide circle
class NodeManager {
+beginNodeSystem() : void
+runNodeSystem() : void
-handleRFID() : void
-publishCheckpoint(const char*) : void
-publishRegistration(const char*) : void
-handleHeartbeat() : void
-handleMqttMessage(char*, uint8_t*, unsigned int) : void
}
class MyNodeNetworkConfig {
+beginMyNetConfig() : void
+loopMyNetConfig() : void
+getBootstrapConfig() : myNodeBootstrapConfig
+getRemoteConfig() : myNodeRemoteConfig
}
class MyNodeWiFi {
+setCredentials(const char*, const char*) : void
+startWiFi() : void
+loopNetWiFi() : void
+amIConnected() : bool
}
class MyNodeMQTT {
+startMyMQTT() : void
+myNodeMQTTLoop() : void
+publishDetection(...) : bool
+publishRegistration(...) : bool
+publishHeartbeat(...) : bool
+subscribeToMyNodeNetMQTT(const char*) : bool
}
class MyNodeRFID {
+beginMyNodeRFID(uint32_t) : void
+readDetectedTag(char*, size_t) : bool
+runRFIDConfiguration() : void
}
class NodeStatusLED {
+setGreenConnected(bool) : void
+setRedDetecting(bool) : void
+startIdentifyBlink(uint8_t, uint32_t) : void
+updateMyLEDstate() : void
}
class NodeClock {
+millisNow() const : uint32_t
}
class NodeBoardControl {
+readDigital(uint8_t) : int
}

NodeManager --> MyNodeNetworkConfig : loads bootstrap/remote config
NodeManager --> MyNodeWiFi : starts and monitors WiFi
NodeManager --> MyNodeMQTT : MQTT loop, publish, subscribe, callback
NodeManager --> MyNodeRFID : reads UHF EPC tag IDs
NodeManager --> NodeStatusLED : connection/detection/identify status
NodeManager --> NodeClock : non-blocking timers
NodeManager --> NodeBoardControl : reset button and board restart

MyNodeRFID --> NodeManager : tag EPC result
NodeManager --> MyNodeMQTT : registration/checkpoint/heartbeat payloads
MyNodeMQTT --> NodeManager : MQTT command callback
@enduml

' ==========================================================
' SECTION 3 — RELATION TO INTERFACES
' ==========================================================

@startuml Interface_Relations_All
title Interface Relation Overview
skinparam classAttributeIconSize 0
hide circle
interface IMyNodeWiFi
interface IMyNodeNetworkConfig
interface IMyNodeMQTTPublisher
interface IMyNodeMQTTSubscriber
interface IMyNodeMQTTConnector
interface IMyNodeRFID
interface INodeStatusLED
interface INodeClock
interface INodeBoardControl

class MyNodeWiFi
class MyNodeNetworkConfig
class MyNodeMQTT
class MyNodeRFID
class NodeStatusLED
class NodeClock
class NodeBoardControl
class NodeManager

IMyNodeMQTTConnector --|> IMyNodeMQTTSubscriber
IMyNodeMQTTConnector --|> IMyNodeMQTTPublisher

MyNodeWiFi ..|> IMyNodeWiFi
MyNodeNetworkConfig ..|> IMyNodeNetworkConfig
MyNodeMQTT ..|> IMyNodeMQTTConnector
MyNodeRFID ..|> IMyNodeRFID
NodeStatusLED ..|> INodeStatusLED
NodeClock ..|> INodeClock
NodeBoardControl ..|> INodeBoardControl

NodeManager o-- IMyNodeWiFi
NodeManager o-- IMyNodeNetworkConfig
NodeManager o-- IMyNodeMQTTConnector
NodeManager o-- IMyNodeRFID
NodeManager o-- INodeStatusLED
NodeManager o-- INodeClock
NodeManager o-- INodeBoardControl
@enduml

@startuml MQTT_Interface_Relation
title MQTT Interface Relation
skinparam classAttributeIconSize 0
hide circle
interface IMyNodeMQTTPublisher {
+publishToMyNodeNetMQTT(const char*, const char*) : bool
}
interface IMyNodeMQTTSubscriber {
+subscribeToMyNodeNetMQTT(const char*) : bool
+unsubscribeMyNodeNetMQTT(const char*) : void
}
interface IMyNodeMQTTConnector {
+setNodeMQTTServer(const char*) : void
+setNodeMQTTPort(int) : void
+setNodeMQTTClientId(const char*) : void
+myNodeCallbackFunction(char*, uint8_t*, unsigned int) : void
+setMessageCallback(void (*)(char*, uint8_t*, unsigned int)) : void
+startMyMQTT() : void
+connectToMyNodeNetwork() : void
+reconnectToMyMQTT() : void
+updateServerConfig() : void
+myNodeMQTTLoop() : void
+amIConnected() : bool
+publishDetection(...) : bool
+publishRegistration(...) : bool
+publishHeartbeat(...) : bool
+publishGreeting(...) : bool
}
class MyNodeMQTT
IMyNodeMQTTConnector --|> IMyNodeMQTTSubscriber
IMyNodeMQTTConnector --|> IMyNodeMQTTPublisher
MyNodeMQTT ..|> IMyNodeMQTTConnector
@enduml

@startuml Network_Interface_Relation
title Network Interface Relation
skinparam classAttributeIconSize 0
hide circle
interface IMyNodeWiFi {
+setCredentials(const char*, const char*) : void
+hasCredentials() const : bool
+startWiFi() : void
+loopNetWiFi() : void
+amIConnected() : bool
+reconnectWiFi() : void
+disconnectWiFi() : void
}
interface IMyNodeNetworkConfig {
+beginMyNetConfig() : void
+loopMyNetConfig() : void
+isConfigured() const : bool
+isSetupMode() const : bool
+getBootstrapConfig() const : const myNodeBootstrapConfig&
+getRemoteConfig() const : const myNodeRemoteConfig&
+setRemoteConfig(const String&, const String&, const String&, const String&, uint16_t, bool) : void
+resetConfiguration() : void
}
class MyNodeWiFi
class MyNodeNetworkConfig
MyNodeWiFi ..|> IMyNodeWiFi
MyNodeNetworkConfig ..|> IMyNodeNetworkConfig
@enduml

@startuml RFID_Interface_Relation
title RFID Interface Relation
skinparam classAttributeIconSize 0
hide circle
interface IMyNodeRFID {
+beginMyNodeRFID(uint32_t) : void
+enableMyRFID() : void
+disableMyRFID() : void
+clearBuffer() : void
+pollFrame() : bool
+readDetectedTag(char*, size_t) : bool
+configureRFID() : void
+startRFIDConfiguration(uint16_t) : void
+runRFIDConfiguration() : void
+isRFIDConfigurationFinished() const : bool
}
class MyNodeRFID
MyNodeRFID ..|> IMyNodeRFID
@enduml

@startuml LED_Board_Clock_Interface_Relation
title LED, Board, and Clock Interface Relation
skinparam classAttributeIconSize 0
hide circle
interface INodeStatusLED {
+beginMyLEDs() : void
+setGreenConnected(bool) : void
+setRedDetecting(bool) : void
+startIdentifyBlink(uint8_t, uint32_t) : void
+updateMyLEDstate() : void
}
interface INodeBoardControl {
+setPinMode(uint8_t, uint8_t) : void
+readDigital(uint8_t) : int
+restartBoard() : void
}
interface INodeClock {
+millisNow() const : uint32_t
}
class NodeStatusLED
class NodeBoardControl
class NodeClock
NodeStatusLED ..|> INodeStatusLED
NodeBoardControl ..|> INodeBoardControl
NodeClock ..|> INodeClock
@enduml
